# Textural_Density

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Main.py  README.md  REQUIREMENTS.odt  build_exe.py  calibration.py  config.py  data_processor.py  data_processor_legacy.py  densidade-vertical.spec  densidade_intervalar.py  error_handler.py  exemplo_densidade.xml  gui_calibration.py  gui_components.py  logging_config.py  microtonal.py  midi_loader.py  plot_metr_espectrais.py  plot_spectrogram.py  pyproject.toml  pytest.ini  requirements.txt  run.py  scientific_report_generator.py  spectral_analysis.py  statistical_validation.py  timbre_texture_analysis.py  xml_loader.py
.circleci/: config.yml
adapters/: __init__.py  gui_adapter.py  legacy_input.py
benchmarks/: README.md
config/: density_params.json
core/: __init__.py  composite.py  composite_trace.py  construct_metadata.py  converters.py  defaults.py  event_density.py  export_constants.py  formatting.py  hash_utils.py  input_validation.py  instrument_lookup_trace.py  interval_compactness.py  metrics_metadata.py  models.py  orchestration.py  orchestration_mass.py  pipeline.py  pitch_aggregation.py  pitch_range_validation.py  pitch_structure.py  quantity_scaling.py  registral_density.py  reporting.py  request.py  score_analysis.py  sensitivity.py  source_aggregation.py  subindices.py  temporal.py  version.py
docs/: API.md  MATHEMATICAL_MANUAL.md  MIGRATION.md  TECHNICAL_MANUAL.md  VERSIONING.md  constants_and_assumptions.md  core_native_pipeline_plan.md  formal_construct_axioms.md  instrument_acoustic_sources.md  instrument_metadata_audit.md  instrument_profile_importer.md  legacy_pipeline_extraction.md  qa_checklist.md  revised_path_to_90_score_only.md  score_only_90_readiness_checklist.md  score_only_upgrade_rubric.json  score_only_upgrade_rubric.md
gui/: __init__.py  analysis_adapter.py  app.py  calibration_window.py  file_io.py  state.py  types.py
instrumentos/: README.md  __init__.py  (+39 more)
(+216 files in other folders)
