# Textural Density
# pip install -e .  then run: densidade-vertical  (legacy PyPI/console name)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "densidade-vertical"
version = "1.1.1"
description = "Textural Density — vertical density metrics, temporal score analysis, and epistemic metadata for symbolic music research"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Luis Raimundo", email = "esmllr@gmail.com" }]
keywords = ["music", "density", "analysis", "microtonal", "spectral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0,<3.0.0",
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "scipy>=1.7.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "pyinstaller>=5.0.0",
]

[project.scripts]
densidade-vertical = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", ".github*"]

[tool.setuptools.package-dir]
"" = "."

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["data_processor", "utils.notes", "xml_loader"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["core.*", "validation.*"]
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
